[gd_scene load_steps=6 format=3 uid="uid://mb84tfutxsng"]

[ext_resource type="PackedScene" uid="uid://bu2qhq7dcpp8k" path="res://Personajes/personajes.tscn" id="1_5xq36"]
[ext_resource type="Texture2D" uid="uid://qh4778c8molj" path="res://Assets_PixelAdventure/Enemies/AngryPig/angryPig.png" id="2_60j0l"]
[ext_resource type="Script" path="res://Personajes/EnemigoCerdito.gd" id="2_rry0l"]
[ext_resource type="PackedScene" uid="uid://euygwbikevax" path="res://Trampas/dmg_player.tscn" id="4_5o25x"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b3wnb"]
size = Vector2(22, 23.5)

[node name="enemigoCerdito" groups=["Enemigos"] instance=ExtResource("1_5xq36")]
collision_layer = 2
collision_mask = 5
script = ExtResource("2_rry0l")

[node name="Sprite2D" parent="." index="0"]
texture = ExtResource("2_60j0l")
hframes = 9
vframes = 6

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2(0, 0.25)
shape = SubResource("RectangleShape2D_b3wnb")

[node name="RayCasts" type="Node2D" parent="." index="3"]

[node name="RayCastSuelo" type="RayCast2D" parent="RayCasts" index="0"]
target_position = Vector2(0, 20)
collision_mask = 4

[node name="RayCastMuro" type="RayCast2D" parent="RayCasts" index="1"]
target_position = Vector2(-20, 0)
collision_mask = 4

[node name="RayTimer" type="Timer" parent="RayCasts" index="2"]
wait_time = 0.1
one_shot = true

[node name="RayCastPlayerDetector" type="RayCast2D" parent="RayCasts" index="3"]
target_position = Vector2(-50, 0)

[node name="PlayerDetectorTimer" type="Timer" parent="RayCasts" index="4"]
one_shot = true

[node name="dmgPlayer" parent="." index="4" instance=ExtResource("4_5o25x")]

[connection signal="timeout" from="RayCasts/RayTimer" to="." method="_on_ray_timer_timeout"]
[connection signal="timeout" from="RayCasts/PlayerDetectorTimer" to="." method="_on_player_detector_timer_timeout"]
